--- a/.env_sample
+++ b/.env_sample
@@ -1,5 +1,12 @@
-export todo_path="/Users/johndoe/Nextcloud/Apps/todotxt/todo.txt"
-export caldav_url="https://dav.example.com/
+# either ONLY
+export todo_path=
+
+export todo_url="https://cloud.example.com/dav.php/todo.txt"
+export webdav_username=
+export webdav_password=
+
+####
+export caldav_url="https://dav.example.org/caldav"
 export caldav_username=
 export caldav_password=
-export calendar_name="Tasks"
+export calendar_name="todo"
